--- a/Tetris/Tetris/Tetris.vcxproj
+++ b/Tetris/Tetris/Tetris.vcxproj
@@ -147,7 +147,7 @@
   <ItemGroup>
     <ClCompile Include="Draw.cpp" />
     <ClCompile Include="Logic.cpp" />
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Definitions.hpp" />
