--- a/Tetris/Tetris/Tetris.vcxproj.filters
+++ b/Tetris/Tetris/Tetris.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="Logic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Main.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
